package ru.me;
public interface Report {
    void Writer(String s);
}

